<resources>
    <string name="app_name">Las Vegas View</string>
    <string name="one">One</string>
    <string name="view">View</string>
    <string name="worth">Worth</string>
    <string name="a">a</string>
    <string name="thousand_words">Thousand Words</string>
    <string name="todo">TODO</string>
    <string name="the_strat_hotel_casino_amp_skypod"><![CDATA[The STRAT Hotel,Casino & Skypod]]></string>
    <string name="down_arrow">down arrow</string>
    <string name="hotel_image">hotel image</string>
    <string name="about">About</string>
    <string name="top_of_the_world_is_known_as_one_of_the_most_romantic_restaurants_in_the_city_it_offers_an_intimate_dining_setting_paired_with_an_extravagant_view_of_the_entire_city_all_encompassed_in_a_360_degree_revolving_frame_yes_that_s_right_this_restaurant_allows_diners_the_opportunity_to_see_las_vegas_in_its_entirety_if_they_re_able_to_stay_for_at_least_80_minutes_the_time_needed_for_one_full_rotation">Top of the World is known as one of the most romantic restaurants in the city. It offers an intimate dining setting paired with an extravagant view of the entire city, all encompassed in a 360-degree revolving frame. Yes, that’s right, this restaurant allows diners the opportunity to see Las Vegas in its entirety if they’re able to stay for at least 80 minutes, the time needed for one full rotation.</string>
    <string name="_591">(591)</string>
    <string name="_491">491</string>
</resources>