<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">


    <ImageView
        android:id="@+id/header_imageview"
        android:layout_width="412dp"
        android:layout_height="291dp"
        android:contentDescription="@string/hotel_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header_background" />

    <ImageView
        android:id="@+id/down_details"
        android:layout_width="47dp"
        android:layout_height="42dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/down_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_imageview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:padding="10dp"
                android:layout_marginTop="8dp"
                android:id="@+id/hotel_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/the_strat_hotel_casino_amp_skypod"
                android:textColor="@color/black"
                android:fontFamily="@font/open_sans_regular"
                android:textSize="24sp"
                 />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>